fix navbar overlapping content in mobile view

--- a/user/components/NavBar.module.css
+++ b/user/components/NavBar.module.css
@@ -1,6 +1,6 @@
-.navbar {
+.myNavBar {
     font-weight: 600;
-    height: 75px;
+    min-height: 75px;
 }
 
 .linkContainer a {
